[gd_scene load_steps=6 format=3 uid="uid://daot25v58e7k6"]

[ext_resource type="Theme" uid="uid://leiuhrufh5o8" path="res://theme_data/new_theme.tres" id="2_odcyh"]
[ext_resource type="Texture2D" uid="uid://duhf0ii3np8qh" path="res://addons/images/plus.png" id="2_xj4ok"]
[ext_resource type="Script" path="res://scripts/tasks/hide_caret.gd" id="3_jbruc"]
[ext_resource type="Texture2D" uid="uid://bdhbmofvrcf3y" path="res://addons/images/redo.png" id="4_dooqu"]
[ext_resource type="Texture2D" uid="uid://cklr1uqmqs7hb" path="res://addons/images/reset.png" id="4_hll5u"]

[node name="Project" type="HBoxContainer" groups=["task"]]
theme_override_constants/separation = 15

[node name="AddTaskButton" type="Button" parent="."]
texture_filter = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_odcyh")
theme_type_variation = &"GreenButton"
icon = ExtResource("2_xj4ok")
icon_alignment = 1
expand_icon = true

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
placeholder_text = "Enter task..."
clear_button_enabled = true
script = ExtResource("3_jbruc")

[node name="ResetButton" type="Button" parent="."]
layout_mode = 2
theme_override_constants/icon_max_width = 64
icon = ExtResource("4_dooqu")
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_odcyh")
theme_type_variation = &"RedButton"
icon = ExtResource("4_hll5u")
icon_alignment = 1
expand_icon = true

[connection signal="mouse_entered" from="LineEdit" to="LineEdit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineEdit" to="LineEdit" method="_on_mouse_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
